--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name = "author" content = "Jivahn Moradian">
     <meta name = "keywords" content = "Khodadad Moradian, Univerve, International Consulting, India">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+    <meta name="google-site-verification" content="gw-e3dRIEL4VsV1EQbSvwfPB7XpKLY76ryPQ9LhvonU" />
   </head>
 
   <body>
