--- a/index.html
+++ b/index.html
@@ -245,18 +245,18 @@
         <div class = "title">Our Team</div>
         <div class = "surround">
           <div class = "person">
-            <div class = "name">Khodadad K. Moradian</div>
+            <div class = "name">Khodadad K. Moradian (K.K. Moradian)</div>
             <div class = "spacer">
               <img src = "photos/kkm_head.jpg" alt = "Photo of Univerve" style = "max-height: 21vw;">
               <div class = "text">Khodadad Moradian's background spans three continents: he has worked with multi-national companies in India (Hoya, Roquette, Alstom, TATA Group), in France (Univerve, Alstom), and in the U.S.A. (The Parsons Group). His expertise spans countless industries, including engineering, power, transport, infrastructure, consumer goods, IT, and agriculture, with experience ranging from CFO to Strategic Consultant to Managing Director. He holds post-graduate degrees from Bombay University (Jamnalal Bajaj Institute) and Thunderbird, a certificate from INSEAD, and a bachelor's degree in Engineering from Bombay University.</div>
             </div>
             <div class = "spacer">
               <div class = "text">
-                <div class = "text-full">Mr. Moradian has helped numerous companies do business successfully in India, and has enabled several Indian companies to expand abroad. As an Interim Manager, he excels in restructuring and turning around companies, especially those on the verge of bankruptcy. He is known to take swift action to build a team of high-performing individuals with impeccable integrity. He is experienced in setting up effective organizational structures with efficient SOPs and systems, in quickly off-shoring non-core businesses, and in rewarding creativity. As Interim Manager, Mr. Moradian has implemented over 17 mergers, acquisitions, and divestments, and has set up two greenfield sites.</div>
+                <div class = "text-full">K.K. has helped numerous companies do business successfully in India, and has enabled several Indian companies to expand abroad. As an Interim Manager, he excels in restructuring and turning around companies, especially those on the verge of bankruptcy. He is known to take swift action to build a team of high-performing individuals with impeccable integrity. He is experienced in setting up effective organizational structures with efficient SOPs and systems, in quickly off-shoring non-core businesses, and in rewarding creativity. As Interim Manager, Mr. Moradian has implemented over 17 mergers, acquisitions, and divestments, and has set up two greenfield sites.</div>
               </div>
             </div>
             <div class = "spacer">
-              <div class = "text">Mr. Moradian also specializes in guiding companies to speedily align local operations with the parent company's organization, policies, and procedures. He has a proven track record of dealing with graft, and ensuring that operations are conducted with the highest ethical standards. He is a strong believer in succession planning, which is the best way for companies to create an internal talent pool, which can in turn assist them in growth and acquisitions / expansions.</div>
+              <div class = "text">K.K. also specializes in guiding companies to speedily align local operations with the parent company's organization, policies, and procedures. He has a proven track record of dealing with graft, and ensuring that operations are conducted with the highest ethical standards. He is a strong believer in succession planning, which is the best way for companies to create an internal talent pool, which can in turn assist them in growth and acquisitions / expansions.</div>
               <img src = "photos/kkm_celebrated.jpg" alt = "Photo of Univerve" style = "width: 40%; border-radius: 50%; max-height: 15vw;">
             </div>
           </div>
