--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang = "en">
   <head>
-    <title>Univerve</title>
+    <title>Univerve | International Consulting & Strategic Advisory</title>
     <link href = "style.css" rel = "stylesheet">
     <meta name = "description" content = "Univerve Consulting company website">
     <meta name = "author" content = "Jivahn Moradian">
-    <meta name = "keywords" content = "Khodadad Moradian, Univerve, International Consulting, India">
+    <meta name = "keywords" content = "Khodadad Moradian, Univerve, International Consulting, Top Indian consulting companies, French company business India, Acquire business India">
+    <meta name = "description" content = "Univerve is a leading consulting and strategic advisory firm specializing in helping American and European companies who seek to do business in India. Our services include restructuring and interim management, M&A advisory, hive-offs, JVs and alliances, and strategical advisory.">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <meta name="google-site-verification" content="gw-e3dRIEL4VsV1EQbSvwfPB7XpKLY76ryPQ9LhvonU" />
   </head>
@@ -40,7 +41,7 @@
         <div class = "surround">
           <div class = "spacer">
             <div class = "text">Univerve is a boutique consulting and strategic advisory firm, with a global perspective. We provide a variety of services, including restructuring and interim management, M&A advisory, hive-offs, JVs and alliances, strategy advising, and consulting. We specialize in helping clients in Europe and in the U.S.A. who seek to do business in India, or with Indian firms who seek to do business abroad.</div>
-            <img src = "photos/univerve-handshake.jpg" alt = "Photo of Univerve" style = "max-height: 11vw;">
+            <img src = "photos/univerve-handshake.jpg" alt = "Univerve founder K.K. Moradian shaking hands with a client" style = "max-height: 11vw;">
           </div>
           <div class = "text">
             <div class = "text-full">Univerve has a team of specialized and accomplished associates, who are selectively brought in to meet our clients' specific needs, and actively participate in all stages of a project. Examples of expertise inlcude domain knowledge of IT, technical knowledge of chemical processes (e.g. coal liquefaction), local knowledge of an acquisition target, and experience dealing with local government rules and regulations. We pride ourselves on coaching and guiding our clients throughout the process, and continue to support them until the end, regardless of the outcome.</div>
@@ -69,17 +70,17 @@
                   <div class = "subtitle">Sample Solutions</div>
                   <div class = "example">
                     <div class = "problem">An Anglo-French 7,200-employee company operating in India was on the verge of bankruptcy, with 10 out of 12 units having negative EBITDA.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">Our experienced interim management<br>a) shut down two units,<br>b) off-shored operations,<br>c) halved manpower.<br>As a result this firm's market cap rose 15-fold in 7 years.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">A French agro company acquired a majority stake in an Indian firm but had problems buying back the promoter's minority stake, reducing the company's value by 80% in two years.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">As Interim CEO,<br>a) restored profitability,<br>b) bought out the balance shares,<br>c) replaced key managers,<br>d) trained a new CEO to take over.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">A Japanese lens manufacturing unit in India had been losing money for 12 years. In total, its losses exceeded 4 times its revenue.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution"><br>Our interim management made this unit cash-positive in 8 months.</div>
                   </div>
                 </div>
@@ -99,17 +100,17 @@
                   <div class = "subtitle">Sample Solutions</div>
                   <div class = "example">
                     <div class = "problem">A protection equipment manufacturer had a division sustaining huge losses, which they wanted to hive off.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We convinced the client to source key components from India. The unit became profitable within a year, and the client kept the business.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">The 4,000-person Indian arm of a European company had to manage a merger with a company of the same size, as part of the European company's global strategy.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">As Interim Manager,<br>a) merged HR, Finance & IT,<br>b) reduced offices to create cost synergies,<br>c) provided a sense of stability amidst differences in culture, SOP, and ethics.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem"><br>An Indian auto component manufacturing company wanted to<br>a) diversify, and<br>b) have access to the international market.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We helped the firm acquire a division of a European company. The Indian firm<br>a) got access to the European market,<br>b) set up a greenfield and expanded in India with excess French machinery.</div>
                   </div>
                 </div>
@@ -129,17 +130,17 @@
                   <div class = "subtitle">Sample Solutions</div>
                   <div class = "example">
                     <div class = "problem">An $8 billion company's operations were critically hindered by a small manufacturer delaying delivering supplies: a $2.5 million supply hindered the assembly of a $250 million project.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution"><br><br>We provided on-site service to identify and resolve this supply problem.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">A South African firm had to pitch a technology that converts coal to liquid gas to the Indian government.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We advised for technology transfer for a $500 million plant, which could reduce oil import bills by $10 billion.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">A &euro; 3.5 billion European company faced competition when bidding for a $350 million project. While our client had a technologically superior product, the competition provided a 20% cheaper version.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution"><br>We found and highlighted discrepancies in the design of the competition's product, thereby securing the deal for our client.</div>
                   </div>
                 </div>
@@ -159,18 +160,18 @@
                   <div class = "subtitle">Sample Solutions</div>
                   <div class = "example">
                     <div class = "problem">Two weeks before the bidding deadline, a French/Italian company couldn't find the 350 workers it needed to fire-proof paint a refinery in Abu Dhabi.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We helped identify, negotiate, and select an Indian firm to secure the labor. The work was completed in a record five days, giving our client ample time to prepare the bid.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">A French material handling firm had an Indian JV partner that
                       failed to contribute its fair capital share, resulting in site disputes with clients, vendors, and bankers.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution"><br>We found a local strategic partner to replace their existing one, and assisted in out-of-court settlement of several of its disputes.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem"><br>A French firm was bidding for a Govt of India defence project, and needed an Indian partner to meet the offset requirements.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We identified local companies both for acquisition and for JV partnership. An MoU was signed for the JV, to take effect once the defence contract was obtained.</div>
                   </div>
                 </div>
@@ -190,17 +191,17 @@
                   <div class = "subtitle">Sample Solutions</div>
                   <div class = "example">
                     <div class = "problem">A &euro; 3.5 billion French family-owned fund was seeking to invest in India, and wanted to identify the sectors they should focus on.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We conducted a fact-finding trip with the firm's Managing Director, and helped them identify their target sectors.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">An Indian developer needed to raise funds from abroad to construct a large residential complex, which included restaurants, a movie theater, and a shopping mall.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We advised the developer to divide the project into four separate ones, as it was difficult to find investors interested in the comprehensive project.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem"><br>A niche French IT firm wanted funds to expand globally.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We identified a suitable strategic Indian partner that opened up the French and Indian markets for both firms.</div>
                   </div>
                 </div>
@@ -220,17 +221,17 @@
                   <div class = "subtitle">Sample Solutions</div>
                   <div class = "example">
                     <div class = "problem">An Indian entrepreneur has developed and patented a non-diabetic sugar, and needs manufacturing and marketing assistance.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution"><br>We are currently working on this with potential European strategic investors.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem"><br><br>Setting up a 100 million LPD desalination plant was creating environmental damage.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We proposed replacing the large plant with 400 smaller ones, which would<br>a) have a lower environmental impact,<br>b) create local employment,<br>c) reduce distribution and piping costs.</div>
                   </div>
                   <div class = "example">
                     <div class = "problem">Indian universities do not have the capacity to meet the high demand of students wanting to become doctors. Indian students who study medicine abroad rarely receive the experience needed to practice locally.</div>
-                    <img src = "photos/arrow.png" alt = "Arrow" style = "object-fit: contain;">
+                    <img src = "photos/arrow.png" alt = "Arrow from problem to solution" style = "object-fit: contain;">
                     <div class = "solution">We are negotiating with a French hospital group to allow Indian students to study and intern in Europe, to satisfy the European doctor shortage, while providing experience for the students.</div>
                   </div>
                 </div>
@@ -247,7 +248,7 @@
           <div class = "person">
             <div class = "name">Khodadad K. Moradian (K.K. Moradian)</div>
             <div class = "spacer">
-              <img src = "photos/kkm_head.jpg" alt = "Photo of Univerve" style = "max-height: 21vw;">
+              <img src = "photos/kkm_head.jpg" alt = "K.K. Moradian headshot" style = "max-height: 21vw;">
               <div class = "text">Khodadad Moradian's background spans three continents: he has worked with multi-national companies in India (Hoya, Roquette, Alstom, TATA Group), in France (Univerve, Alstom), and in the U.S.A. (The Parsons Group). His expertise spans countless industries, including engineering, power, transport, infrastructure, consumer goods, IT, and agriculture, with experience ranging from CFO to Strategic Consultant to Managing Director. He holds post-graduate degrees from Bombay University (Jamnalal Bajaj Institute) and Thunderbird, a certificate from INSEAD, and a bachelor's degree in Engineering from Bombay University.</div>
             </div>
             <div class = "spacer">
@@ -257,13 +258,13 @@
             </div>
             <div class = "spacer">
               <div class = "text">K.K. also specializes in guiding companies to speedily align local operations with the parent company's organization, policies, and procedures. He has a proven track record of dealing with graft, and ensuring that operations are conducted with the highest ethical standards. He is a strong believer in succession planning, which is the best way for companies to create an internal talent pool, which can in turn assist them in growth and acquisitions / expansions.</div>
-              <img src = "photos/kkm_celebrated.jpg" alt = "Photo of Univerve" style = "width: 40%; border-radius: 50%; max-height: 15vw;">
+              <img src = "photos/kkm_celebrated.jpg" alt = "K.K. Moradian receiving appreciation from employees in India" style = "width: 40%; border-radius: 50%; max-height: 15vw;">
             </div>
           </div>
           <div class = "person">
             <div class = "name">Jacques-Gabriel Cassier</div>
             <div class = "spacer">
-              <img src = "photos/jgc_head.jpg" alt = "Jacques-Gabriel Cassier Photo" style = "max-height: 21vw;">
+              <img src = "photos/jgc_head.jpg" alt = "Jacques-Gabriel Cassier headshot" style = "max-height: 21vw;">
               <div class = "text">Jacques-Gabriel Cassier is an executive business coach and a sparring partner for ExCom and Board Members. He has over 20 years of professional experience in multinational industrial groups, and has served in diverse Senior Management roles, including international projects (e.g. transformation, organizational, strategic), finance, and process improvement. He reorganized and headed the Internal Audit and the Management Accounting functions of the former Alstom group (energy and railways – &euro;20 billion sales and 120,000 employees). He also deployed the Lean Six Sigma programme over the whole Alstom group.</div>
             </div>
             <div class = "text">
