--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src = "photos/univerve-handshake.jpg" alt = "Univerve founder K.K. Moradian shaking hands with a client" style = "max-height: 11vw;">
           </div>
           <div class = "text">
-            <div class = "text-full">Univerve has a team of specialized and accomplished associates, who are selectively brought in to meet our clients' specific needs, and actively participate in all stages of a project. Examples of expertise inlcude domain knowledge of IT, technical knowledge of chemical processes (e.g. coal liquefaction), local knowledge of an acquisition target, and experience dealing with local government rules and regulations. We pride ourselves on coaching and guiding our clients throughout the process, and continue to support them until the end, regardless of the outcome.</div>
+            <div class = "text-full">Univerve has a team of specialized and accomplished associates, who are selectively brought in to meet our clients' specific needs, and actively participate in all stages of a project. Examples of expertise include domain knowledge of IT, technical knowledge of chemical processes (e.g. coal liquefaction), local knowledge of an acquisition target, and experience dealing with local government rules and regulations. We pride ourselves on coaching and guiding key managers of our clients to take on future leadership roles, and providing ongoing support to our clients.</div>
           </div>
         </div>
         <a id = "services"></a>
